force-app/main/default/objects/purecloud__PureCloud_Routing_Request__c/purecloud__PureCloud_Routing_Request__c.object-meta.xml
<CustomObject>
    <description>Request to hold information for objects to route in Genesys Cloud</description>
    <label>Genesys Cloud Routing Request</label>
    <nameField>
        <label>Routing Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Genesys Cloud Routing Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>