force-app/main/default/objects/purecloud__PureCloud_Routing_Request__c/fields/purecloud__Attributes__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Attributes__c</fullName>
    <label>Attributes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>