force-app/main/default/objects/purecloud__PureCloud_Routing_Request__c/fields/purecloud__Display_Address__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Display_Address__c</fullName>
    <label>Display Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>