force-app/main/default/objects/purecloud__PureCloud_Routing_Request__c/fields/purecloud__Failed_Attempts__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Failed_Attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Failed Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>