force-app/main/default/objects/purecloud__PureCloud_Routing_Request__c/fields/purecloud__Queue__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Queue__c</fullName>
    <label>Queue</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Australia_Phone_EN</fullName>
                <color>#FFFFFF</color>
                <label>Australia_Phone_EN</label>
            </value>
            <value>
                <fullName>Australia_Phone_Training_EN</fullName>
                <color>#FFFFFF</color>
                <label>Australia_Phone_Training_EN</label>
            </value>
            <value>
                <fullName>Bahrain_Phone_EN</fullName>
                <color>#FFFFFF</color>
                <label>Bahrain_Phone_EN</label>
            </value>
            <value>
                <fullName>Brazil_Email_PT</fullName>
                <color>#FFFFFF</color>
                <label>Brazil_Email_PT</label>
            </value>
            <value>
                <fullName>Brazil_Phone_PT</fullName>
                <color>#FFFFFF</color>
                <label>Brazil_Phone_PT</label>
            </value>
            <value>
                <fullName>Canada_Email_FR</fullName>
                <color>#FFFFFF</color>
                <label>Canada_Email_FR</label>
            </value>
            <value>
                <fullName>Canada_Phone_EN</fullName>
                <color>#FFFFFF</color>
                <label>Canada_Phone_EN</label>
            </value>
            <value>
                <fullName>Canada_Phone_FR</fullName>
                <color>#FFFFFF</color>
                <label>Canada_Phone_FR</label>
            </value>
            <value>
                <fullName>Denmark_Email_DA</fullName>
                <color>#FFFFFF</color>
                <label>Denmark_Email_DA</label>
            </value>
            <value>
                <fullName>Denmark_Phone_DA</fullName>
                <color>#FFFFFF</color>
                <label>Denmark_Phone_DA</label>
            </value>
            <value>
                <fullName>DubaiCSC_Phone_RU</fullName>
                <color>#FFFFFF</color>
                <label>DubaiCSC_Phone_RU</label>
            </value>
            <value>
                <fullName>Europe_EmailInvoice_T1</fullName>
                <color>#FFFFFF</color>
                <label>Europe_EmailInvoice_T1</label>
            </value>
            <value>
                <fullName>Europe_EmailInvoice_T2</fullName>
                <color>#FFFFFF</color>
                <label>Europe_EmailInvoice_T2</label>
            </value>
            <value>
                <fullName>Europe_EmailInvoice_T3</fullName>
                <color>#FFFFFF</color>
                <label>Europe_EmailInvoice_T3</label>
            </value>
            <value>
                <fullName>Europe_EmailInvoice_T4</fullName>
                <color>#FFFFFF</color>
                <label>Europe_EmailInvoice_T4</label>
            </value>
            <value>
                <fullName>Europe_Email_DE</fullName>
                <color>#FFFFFF</color>
                <label>Europe_Email_DE</label>
            </value>
            <value>
                <fullName>Europe_Email_EN</fullName>
                <color>#FFFFFF</color>
                <label>Europe_Email_EN</label>
            </value>
            <value>
                <fullName>Europe_Email_FR</fullName>
                <color>#FFFFFF</color>
                <label>Europe_Email_FR</label>
            </value>
            <value>
                <fullName>Europe_Email_IT</fullName>
                <color>#FFFFFF</color>
                <label>Europe_Email_IT</label>
            </value>
            <value>
                <fullName>Europe_Email_NL</fullName>
                <color>#FFFFFF</color>
                <label>Europe_Email_NL</label>
            </value>
            <value>
                <fullName>Europe_Phone_DE</fullName>
                <color>#FFFFFF</color>
                <label>Europe_Phone_DE</label>
            </value>
            <value>
                <fullName>Europe_Phone_EN</fullName>
                <color>#FFFFFF</color>
                <label>Europe_Phone_EN</label>
            </value>
            <value>
                <fullName>Europe_Phone_FR</fullName>
                <color>#FFFFFF</color>
                <label>Europe_Phone_FR</label>
            </value>
            <value>
                <fullName>Europe_Phone_IT</fullName>
                <color>#FFFFFF</color>
                <label>Europe_Phone_IT</label>
            </value>
            <value>
                <fullName>Europe_Phone_NL</fullName>
                <color>#FFFFFF</color>
                <label>Europe_Phone_NL</label>
            </value>
            <value>
                <fullName>Europe_Phone_RU</fullName>
                <color>#FFFFFF</color>
                <label>Europe_Phone_RU</label>
            </value>
            <value>
                <fullName>Europe_Phone_StoreHotline_FR</fullName>
                <color>#FFFFFF</color>
                <label>Europe_Phone_StoreHotline_FR</label>
            </value>
            <value>
                <fullName>Europe_Phone_Training1_EN</fullName>
                <color>#FFFFFF</color>
                <label>Europe_Phone_Training1_EN</label>
            </value>
            <value>
                <fullName>Finland_Email_FI</fullName>
                <color>#FFFFFF</color>
                <label>Finland_Email_FI</label>
            </value>
            <value>
                <fullName>Finland_Phone_FI</fullName>
                <color>#FFFFFF</color>
                <label>Finland_Phone_FI</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>