force-app/main/default/objects/purecloud__PureCloud_Routing_Request__c/fields/purecloud__Remote_Name__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Remote_Name__c</fullName>
    <label>Remote Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>