force-app/main/default/objects/purecloud__PureCloud_Routing_Request__c/fields/purecloud__Salesforce_Object_ID__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Salesforce_Object_ID__c</fullName>
    <label>Salesforce Object ID (for screenpop)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>