force-app/main/default/objects/purecloud__PureCloud_Routing_Request__c/fields/purecloud__Skills__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Skills__c</fullName>
    <label>Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>866Vuitton</fullName>
                <color>#FFFFFF</color>
                <label>866Vuitton</label>
            </value>
            <value>
                <fullName>Canada</fullName>
                <color>#FFFFFF</color>
                <label>Canada</label>
            </value>
            <value>
                <fullName>Canada EN</fullName>
                <color>#FFFFFF</color>
                <label>Canada EN</label>
            </value>
            <value>
                <fullName>Canada FR</fullName>
                <color>#FFFFFF</color>
                <label>Canada FR</label>
            </value>
            <value>
                <fullName>CareServices</fullName>
                <color>#FFFFFF</color>
                <label>CareServices</label>
            </value>
            <value>
                <fullName>Central</fullName>
                <color>#FFFFFF</color>
                <label>Central</label>
            </value>
            <value>
                <fullName>India</fullName>
                <color>#FFFFFF</color>
                <label>India</label>
            </value>
            <value>
                <fullName>Japan</fullName>
                <color>#FFFFFF</color>
                <label>Japan</label>
            </value>
            <value>
                <fullName>Japan_Horizon</fullName>
                <color>#FFFFFF</color>
                <label>Japan_Horizon</label>
            </value>
            <value>
                <fullName>Malaysia</fullName>
                <color>#FFFFFF</color>
                <label>Malaysia</label>
            </value>
            <value>
                <fullName>Mexico</fullName>
                <color>#FFFFFF</color>
                <label>Mexico</label>
            </value>
            <value>
                <fullName>Mid-West/Mid-Atlantic</fullName>
                <color>#FFFFFF</color>
                <label>Mid-West/Mid-Atlantic</label>
            </value>
            <value>
                <fullName>NorthEast</fullName>
                <color>#FFFFFF</color>
                <label>NorthEast</label>
            </value>
            <value>
                <fullName>NorthWest</fullName>
                <color>#FFFFFF</color>
                <label>NorthWest</label>
            </value>
            <value>
                <fullName>Philippines</fullName>
                <color>#FFFFFF</color>
                <label>Philippines</label>
            </value>
            <value>
                <fullName>Priority</fullName>
                <color>#FFFFFF</color>
                <label>Priority</label>
            </value>
            <value>
                <fullName>Singapore</fullName>
                <color>#FFFFFF</color>
                <label>Singapore</label>
            </value>
            <value>
                <fullName>SouthEast</fullName>
                <color>#FFFFFF</color>
                <label>SouthEast</label>
            </value>
            <value>
                <fullName>VIC</fullName>
                <color>#FFFFFF</color>
                <label>VIC</label>
            </value>
            <value>
                <fullName>West Coast</fullName>
                <color>#FFFFFF</color>
                <label>West Coast</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>