force-app/main/default/objects/purecloud__PureCloud_Routing_Request__c/fields/purecloud__Title__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Title__c</fullName>
    <label>Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>