force-app/main/default/objects/purecloud__PureCloud_Routing_Request__c/listViews/purecloud__Failed_Routing_Requests.listView-meta.xml
<ListView>
    <fullName>purecloud__Failed_Routing_Requests</fullName>
    <columns>NAME</columns>
    <columns>purecloud__Queue__c</columns>
    <columns>purecloud__Salesforce_Object_ID__c</columns>
    <columns>purecloud__Skills__c</columns>
    <columns>purecloud__Language__c</columns>
    <columns>purecloud__Attributes__c</columns>
    <columns>purecloud__Failed_Attempts__c</columns>
    <columns>purecloud__API_Response__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>purecloud__Title__c</columns>
    <columns>purecloud__Remote_Name__c</columns>
    <columns>purecloud__Display_Address__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>purecloud__Failed_Attempts__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Failed Routing Requests</label>
</ListView>